examples/errors/wrong_op_type.jj
func main
{
    let i { 1 + 2.0 };
}